# Eidory

./: Eidory.spec  LICENSE  README.md  pyproject.toml  run_eidory.sh
assets/: app_icon.icns
scripts/: ai_vision_trial.py  build_macos_app.sh
src/eidory/: __init__.py  config.py  main.py
src/eidory/core/: __init__.py  ai_vision.py  ai_vision_worker.py  color_features.py  creative_templates.py  duplicate_detection.py  embedding_provider.py  embedding_worker.py  exporter.py  image_loader.py  inspiration.py  linetop_processor.py  llm_provider.py  media_tools.py  media_types.py  metadata_store.py  reference_grouping.py  scanner.py  search_filters.py  search_service.py  thumbnailer.py  time_utils.py  vector_index.py  video_metadata.py
src/eidory/db/: schema.sql
src/eidory/models/: __init__.py  image_item.py
src/eidory/ui/: __init__.py  accessibility.py  collection_tree.py  drop_import_box.py  image_preview_dialog.py  justified_image_grid.py  main_window.py  near_duplicate_dialog.py  project_board.py  theme.py
tests/: test_accessibility.py  test_ai_vision.py  test_duplicate_detection.py  test_exporter.py  test_image_loader.py  test_image_preview_dialog.py  test_inspiration.py  test_justified_image_grid.py  test_linetop_processor.py  test_main_window_context_menu.py  test_metadata_store.py  test_project_board.py  test_reference_grouping.py  test_scanner.py  test_vector_search.py  test_video_metadata.py
tools/linetop_overlay_helper/: EidoryOverlayHelper.swift
