[project]
name = "eidory"
version = "0.1.0"
description = "Local-first semantic image library for personal use."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "einops>=0.8",
    "numpy>=1.26",
    "pillow>=10.0",
    "PySide6>=6.7",
    "requests>=2.32",
    "sentence-transformers>=3.0",
    "timm>=1.0",
    "torch>=2.3",
    "torchvision>=0.18",
    "transformers>=4.57,<5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
app = [
    "pyinstaller>=6.0",
]

[project.scripts]
eidory = "eidory.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eidory = ["db/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
